[package]
name = "voting-map"
version = "0.1.0"
authors = ["Julian Schrittwieser <j.schrittwieser@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
debug_logging = []
default = [
 # "console_error_panic_hook",
 # "debug_logging"
]

[dependencies]
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "console", "Window", "Performance"
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
debug = true

[package.metadata.wasm-pack.profile.release] 
wasm-opt = ['-O4']
# Enable for profiling.
# wasm-opt = ['-O4', '-g']